--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Database/dbVal.mdb
 *.jpg
 Database/dbMeeny.mdb
 Database/dbProgenyMk2_1-1.mdb
+Database/dbProgenyMk2_1-2.mdb
+Database/dbProgenyMk2_1-3.mdb
