--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ Database/dbMeeny.mdb
 Database/dbProgenyMk2_1-1.mdb
 Database/dbProgenyMk2_1-2.mdb
 Database/dbProgenyMk2_1-3.mdb
+Database/dbBodies.mdb
+Database/dbCatalog.mdb
+Database/dbEvents.mdb
+Database/dbMaps.mdb
