--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ Database/dbBodies.mdb
 Database/dbCatalog.mdb
 Database/dbEvents.mdb
 Database/dbMaps.mdb
+Database/dbBodies.mdb
+Database/dbCatalog.mdb
